ft: add content

--- a/team.html
+++ b/team.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <p>team page</p>
+  <p>This is not easy but i will make it 
+    no matter the challenges
+  </p>
 </body>
 </html>
