home as been updated

--- a/home.html
+++ b/home.html
@@ -8,5 +8,8 @@
 <body>
   <h1>Home page</h1>
   <h2>Life is not easy</h2>
+  <h1>It is about to go down</h1>
+  <h1>This is not easy</h1>
+  <p>I will make it</p>
 </body>
 </html>
