--- a/home.html
+++ b/home.html
@@ -10,6 +10,6 @@
   <h2>Life is not easy</h2>
   <h1>It is about to go down</h1>
   <h1>This is not easy</h1>
-  <p>I will make it</p>
+  <p>Hard work pays</p>
 </body>
 </html>
