--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git</title>
+  <title>Git exercises</title>
 </head>
 <body>
-    <h1>Git exercises</h1>
+  <h1>Home page</h1>
+  <h2>Life is not easy</h2>
+  <h1>It is about to go down</h1>
+  <h1>This is not easy</h1>
+  <p>Hard work pays</p>
 </body>
 </html>
