adding index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Home page</h1>
   <h2>Life is not easy</h2>
+  <h3>let's go</h3>
   <h1>It is about to go down</h1>
   <h1>This is not easy</h1>
   <p>Hard work pays</p>
