adding index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git exercises</title>
-</head>
-<body>
-  <h1>Home page</h1>
-  <h2>Life is not easy</h2>
-  <h3>let's go</h3>
-  <h1>It is about to go down</h1>
-  <h1>This is not easy</h1>
-  <p>Hard work pays</p>
-</body>
+<html>
+<head><title>Home page</title></head>
+<body><h1> This is the home page</h1></body>
 </html>
