--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><title>Home page</title></head>
-<body><h1> This is the home page</h1></body>
+<body>
+  <h1> This is the home pagegit</h1></body>
+  <p>pages</p>
+
 </html>
