--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head><title>Home page</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>home</title>
+</head>
 <body>
-  <h1> This is the home pagegit</h1></body>
-  <p>pages</p>
-
+  <h1>Home page</h1>
+</body>
 </html>
